# ISD-pipeline

./: .gitignore  README.md
event_detector/: .gcloudignore  .gitignore  __main__.py  deploy.sh  entrypoint.py  main.py  pyproject.toml  pytest.ini  requirements.txt
event_detector/controllers/: __init__.py  isd_controller.py
event_detector/entities/states/: local_state.py
event_detector/event_detector/: __main__.py  helper_methods.py  main.py
event_detector/event_detector/controllers/: __init__.py  isd_controller.py
event_detector/event_detector/entities/: __init__.py
event_detector/event_detector/interfaces/: __init__.py  base_dispatcher.py  base_file.py  base_state.py  base_tap.py
event_detector/interfaces/: __init__.py  base_state.py  base_tap.py
event_detector/tests/: test_cloud_storage_state.py  test_ftp_tap.py  test_http_repo_tap.py  test_local_state.py  test_pubsub_dispatcher.py
event_detector/tests/test_data/: local_state.json  test_url.html  test_url_2020.html  test_url_2021.html
ingest/: config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
ingest/ingest/entities/: __init__.py
ingest/ingest/interfaces/: __init__.py  data_loader.py  file_processor.py  files_data_loader.py  ingest_tap.py  process_strategy.py  target_info_parser.py
ingest/tests/: test_csv_file_processor.py  test_encapsulate_json.py  test_file_big_query_loader.py  test_file_cloud_storage_loader.py  test_http_file_download_tap.py  test_ingest_tap.py  test_process_strategies.py  test_pubsub_parser.py
ingest/tests/test_data/: csv_no_header.csv  sample_csv.csv
transform/: .user.yml  Dockerfile  credentials.json  dbt_project.yml  profiles.yml  pyproject.toml  selectors.yml
transform/macros/: generate_schema_name.sql
transform/models/: sources.yml
transform/models/isd_pipeline/: isd_pipeline_hashed.sql  isd_pipeline_logic.sql  isd_pipeline_unnest_fields.sql  isd_pipeline_unnest_records.sql  isd_pipeline_unnested.sql  isd_pipeline_value_mapping.sql  materialized_table.sql  (+5 more)
(+29 files in other folders)
