[tool.poetry]
name = "event-detector"
version = "0.1.0"
description = ""
authors = ["Rafael Lucena <rafles1895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
google-cloud-pubsub = "^2.21.5"
google-cloud-storage = "^2.17.0"
functions-framework = "==3.*"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
