[tool.poetry]
name = "event-detector"
version = "0.1.0"
description = ""
authors = ["Rafael Lucena <rafles1895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
functions-framework = "==3.*"
google-cloud-pubsub = "^2.21.5"
google-cloud-storage = "^2.17.0"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.2.2"
types-beautifulsoup4 = "^4.12.0.20240511"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = ["event_detector"]