[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""
authors = ["'Rafael <rafles1895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-pubsub = "^2.22.0"
google-cloud-storage = "^2.18.0"
functions-framework = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = ["ingest"]