[tool.poetry]
name = "transform"
version = "0.1.0"
description = ""
authors = ["'Rafael <rafles1895@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
